# fastapi-lms

./: .gitignore  README.md  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 3996c0eda1b8_first_commit.py  8ae016dadf37_moving_is_active_to_user_table.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: user.py
pydantic_schemas/: user.py
